fix form background contrast - orang, green red

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -77,7 +77,7 @@ input,
 select,
 textarea {
   color: #111827 !important;
-  background: #ffffff !important;
+  background: #ffae01 !important;
 }
 
 input::placeholder,
@@ -97,7 +97,7 @@ label,
 
 select option {
   color: #111827 !important;
-  background: #ffffff !important;
+  background: #00ff40 !important;
 }
 
 input[type="checkbox"]+span,
@@ -133,7 +133,7 @@ button,
 .card,
 .panel,
 .section {
-  background: #ffffff !important;
+  background: #ff0000 !important;
   color: #111827 !important;
 }
 
@@ -141,7 +141,7 @@ button,
 input,
 select,
 textarea {
-  background: #fa0000 !important;
+  background: #ffffff !important;
   color: #111827 !important;
   border: 1px solid #9ca3af !important;
 }
@@ -149,7 +149,7 @@ textarea {
 /* טקסט בתוך select */
 select option {
   color: #111827 !important;
-  background: #00eeff !important;
+  background: #ffffff !important;
 }
 
 /* כותרות */
